# zdrive

./: .gitignore  LICENSE  README.md  docker-compose.yaml
cars/: Cargo.toml  Dockerfile  insert_sample_cars.sql  openapi.yaml
cars/migrations/: 001_create_tariffs_table.sql  002_create_cars_table.sql  README.md
cars/src/: main.rs
cars/src/application/use_cases/: create_car.rs  create_tariff.rs  delete_car.rs  get_car.rs  get_tariff.rs  list_cars.rs  list_tariffs.rs  mod.rs  update_car.rs  update_tariff.rs
cars/src/domain/: mod.rs
cars/src/domain/errors/: car_errors.rs  mod.rs
cars/src/domain/interfaces/: car_repository.rs  mod.rs  tariff_repository.rs
cars/src/domain/models/: cars.rs  mod.rs  tariffs.rs
cars/src/infrastructure/repositories/: mod.rs  postgres_car_repository.rs  postgres_tariff_repository.rs
cars/src/presentation/: app_state.rs  routes.rs
cars/src/presentation/handlers/: car_handlers.rs  mod.rs  tariff_handlers.rs
telematics/: Cargo.toml  Dockerfile  openapi.yaml
telematics/src/: main.rs
telematics/src/application/use_cases/: get_sensor_data.rs  mod.rs  process_sensor_data.rs  send_command.rs
telematics/src/domain/errors/: mod.rs  telematics_errors.rs
telematics/src/domain/interfaces/: mod.rs  rabbitmq_consumer.rs  rabbitmq_publisher.rs  redis_repository.rs
telematics/src/domain/models/: commands.rs  mod.rs  sensors.rs
telematics/src/infrastructure/: mod.rs
telematics/src/infrastructure/rabbitmq/: consumer.rs  mod.rs  publisher.rs
telematics/src/infrastructure/redis/: mod.rs  redis_repository.rs
telematics/src/presentation/: app_state.rs  routes.rs
telematics/src/presentation/handlers/: command_handlers.rs  mod.rs  sensor_handlers.rs
(+171 files in other folders)
