[package]
name = "cars"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
uuid = {version = "1.19.0", features=["v4", "serde"]}
tokio = {version = "1.48.0", features = ["rt-multi-thread", "macros", "rt"]}
async-trait = "0.1.89"
anyhow = "1.0.100"
thiserror = "2.0.17"
sqlx = {version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"]}
axum = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
tower = "0.5"
tower-http = {version = "0.6", features = ["cors", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}

[dev-dependencies]
tokio-test = "0.4"
