[package]
name = "telematics"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = {version = "1.19.0", features=["v4", "serde"]}
tokio = {version = "1.48.0", features = ["rt-multi-thread", "macros", "rt"]}
async-trait = "0.1.89"
anyhow = "1.0.100"
thiserror = "2.0.17"
lapin = "2.5"
futures-util = "0.3"
redis = {version = "0.26", features = ["tokio-comp", "connection-manager"]}
axum = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
tower = "0.5"
tower-http = {version = "0.6", features = ["cors", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}

[dev-dependencies]
tokio-test = "0.4"
tokio = {version = "1.48.0", features = ["rt-multi-thread", "macros", "rt"]}